# SDL-Game-4

./: .gitignore  CMakeLists.txt
src/: Program.cpp  Program.h  main.cpp
src/entity/: Entity.h  EntityManager.cpp  EntityManager.h  Message.h
src/entity/component/: AiComponent.h  EnemyComponent.h  HealthComponent.h  PositionComponent.h  SelectorComponent.h  UiComponent.h
src/entity/components/: BaseComponent.h  VisualComponent.h
src/entity/message/: DamageMessage.h  Message.h  MouseClickMessage.h
src/entity/system/: AiSystem.cpp  AiSystem.h  BaseSystem.h  HealthSystem.cpp  HealthSystem.h  RenderSystem.cpp  RenderSystem.h  UiSystem.cpp  UiSystem.h
src/misc/: Random.cpp  Random.h  Vector2D.cpp  Vector2D.h  collision.h  types.h
src/state/: BaseState.h  GameplayState.cpp  GameplayState.h
